--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,20 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: MeasuredResponseAI
+email: contact@measuredresponse.ai
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  We use generative AI video to help propel our sense of humor into the world with a sexy edge. We aspire to be a modern "Married with Children." Enjoy!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
+  
 
 # Build settings
 theme: minima
